--- a/Namaste/igniting App/package.json
+++ b/Namaste/igniting App/package.json
@@ -2,13 +2,17 @@
   "name": "namaste-react-code",
   "version": "1.0.0",
   "description": "learning react",
-  "main": "script.js",
   "scripts": {
     "test": "jest"
   },
   "author": "ehsaan",
   "license": "ISC",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
