--- a/Namaste/Cheap Talk/package.json
+++ b/Namaste/Cheap Talk/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-shimmer": "^3.2.0",
+    "react-shimmer-effects": "^1.0.3"
   }
 }
